# aoc

./: .gitignore
2017/: day01.py
2018/: LICENSE  README.md
2018/nim/day02/: part01.nim
2018/nim/day03/: part02.nim
2018/python/day03/: part02.py
2018/python/day04/: part01.py  part02.py
2018/python/day05/: part01.py  part02.py
2018/python/day06/: part01.py
2018/rust/day02/: Cargo.toml
2018/rust/day02/src/: part01.rs  part02.rs  utils.rs
2018/rust/day03/: Cargo.toml
2018/rust/day03/src/: part01.rs  part02.rs
2018/rust/day07/: Cargo.toml
2018/rust/day07/src/: main.rs
2021/aoc2021-clj/: .gitignore
2021/aoc2021-clj/src/aoc2021/: core.clj  day04.clj
2021/aoc2021-rs/: Cargo.toml
2021/aoc2021-rs/src/: lib.rs
aoc2017/: Cargo.toml
aoc2019/: Cargo.toml
aoc2019/src/: arcade.rs  graph.rs  intcode.rs  lib.rs  tree.rs  vec3.rs
aoc2020/: .gitignore  CHANGELOG.md  README.md
aoc2020/src/aoc2020/: core.clj  day01.clj  day02.clj  day03.clj  day04.clj  day05.clj  day06.clj  day07.clj  utils.clj
aoc2020/test/aoc2020/: core_test.clj  day01_test.clj  day02_test.clj  day03_test.clj  day04_test.clj  day05_test.clj  day06_test.clj
aoc2021/: project.clj
aoc2021/src/aoc2021/: core.clj  day01.clj  day02.clj  day03.clj
aoc2021/test/aoc2021/: core_test.clj  day01_test.clj  day02_test.clj  day03_test.clj
nim/day02/: part02.nim
nim/day03/: part01.nim
nim/day_01/: chronal.nim  chronal_p2  chronal_p2.nim  part01.nim
nim/day_02/: part01.nim
python/day03/: part01.py  part02.py
rust/day01/: part01.rs  part02.rs
