[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Thomas Antony <tantony@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
anyhow = "1.0.25"
num = {version = "0.3.0", default-features = false}
num-traits = "0.2.12"

