[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Thomas Antony <tantony@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
anyhow = "1.0.25"
num = {version = "0.3.0", default-features = false}
termion = "1.5.5"
counter = "0.5.2"
ndarray = "0.13.1"
rayon = "1.5.1"

